[package]
name = "gr_core"
version = "0.1.0"
edition = "2021"
description = "General relativity: Kerr geodesics, black hole shadows, Boyer-Lindquist coordinates"
license = "MIT"

[dependencies]
algebra_core = { path = "../algebra_core" }
thiserror = { workspace = true }

# Physics constants and ODE solvers
physical_constants = { workspace = true }
russell_ode = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
