[package]
name = "lattice_filtration"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/Oichkatzelesfrettschen/open_gororoba"

[dependencies]
algebra_core = { path = "../algebra_core" }
num-bigint = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
stats_core = { path = "../stats_core" }
proptest = "1.5"

[[bench]]
name = "filtration_bench"
harness = false
