[package]
name = "materials_core"
version = "0.1.0"
edition = "2021"
description = "Materials science: metamaterial absorbers, Tang mass predictions, refractive index"
license = "MIT"

[dependencies]
algebra_core = { path = "../algebra_core" }
num-complex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rustfft = "6.2"
thiserror = { workspace = true }

# Materials databases and periodic table (workspace)
mendeleev = { workspace = true }
periodic-table-on-an-enum = { workspace = true }
physical_constants = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
