[package]
name = "quantum_core"
version = "0.1.0"
edition = "2021"
description = "Quantum physics: MERA tensor networks, holographic entropy, Ryu-Takayanagi"
license = "MIT"

[dependencies]
nalgebra = { workspace = true }
num-complex = { workspace = true }
petgraph = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rustfft = "6.2"
faer = "0.20"
thiserror = { workspace = true }

# Quantum computing and tensor networks (workspace)
quantum = { workspace = true }
qua_ten_net = { workspace = true }

# Physics constants
physical_constants = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "quantum_bench"
harness = false
