[package]
name = "scrolls_core"
version = "0.1.0"
edition = "2021"
description = "CSV to TOML scroll canonicalization for registry-first datasets"
license = "MIT"

[dependencies]
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
