[package]
name = "spectral_core"
version = "0.1.0"
edition = "2021"
description = "Fractional Laplacian and spectral methods for PDEs"
license = "MIT"

[dependencies]
num-complex = { workspace = true }
ndarray = { workspace = true }
rustfft = { workspace = true }
ndrustfft = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
