[package]
name = "stats_core"
version = "0.1.0"
edition = "2021"
description = "Statistical methodology for physics analysis: Frechet distance, bootstrap CI, Haar unitaries"
license = "MIT"

[features]
default = []
gpu = ["cudarc"]

[dependencies]
nalgebra = { workspace = true }
num-complex = { workspace = true }
statrs = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }
kodama = { workspace = true }
kiddo = { workspace = true }
rustfft = { workspace = true }
realfft = { workspace = true }
hurst = { workspace = true }
algebra_core = { path = "../algebra_core" }
cudarc = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
