[package]
name = "vacuum_frustration"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/Oichkatzelesfrettschen/open_gororoba"

[dependencies]
algebra_core = { path = "../algebra_core", version = "0.1" }
cosmology_core = { path = "../cosmology_core", version = "0.1" }
nalgebra = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
statrs = { workspace = true }
anyhow = { workspace = true }
cudarc = { workspace = true, optional = true }

[dev-dependencies]
stats_core = { path = "../stats_core" }
criterion = { workspace = true }

[features]
default = []
gpu = ["cudarc"]

[[bench]]
name = "frustration_bench"
harness = false
