[package]
name = "gororoba_kernels"
version = "0.2.0"
edition = "2021"
description = "Rust-accelerated kernels for Cayley-Dickson algebra and physics simulations"
license = "MIT"
repository = "https://github.com/eirikr/open_gororoba"

[lib]
name = "gororoba_kernels"
crate-type = ["cdylib", "rlib"]  # Both Python extension and Rust library

[dependencies]
# Python bindings
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
numpy = { version = "0.25", optional = true }

# Core numerics
num-traits = "0.2"
num-complex = "0.4"

# Linear algebra (mature, widely used)
nalgebra = "0.33"

# Quaternions with num crate integration
num-quaternion = "1.0"

# Parallelism
rayon = "1.10"

# RNG
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "2.0"

# Statistics and distributions
statrs = "0.18"

# Graph algorithms (max-flow, min-cut, shortest paths)
petgraph = "0.7"

# Ordered floats for use in graph weights
ordered-float = "4.6"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Property-based testing
proptest = "1.6"
# Floating point comparison
approx = "0.5"

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]

[[bench]]
name = "algebra_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
